<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="44dp"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="322dp"
        android:layout_height="355dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="173dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cpuTV"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/procesador"
                android:textAlignment="textEnd"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cpuDetailsTV"
                android:layout_width="108dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/exynos_7420_64_bits_y_14_nm_4x2_1_ghz_a57_4x1_5_ghz_a53" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ramTV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ram"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ramDetailsTV"
                android:layout_width="145dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_3_gb_lpddr4" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/memoria"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_32_64_128_gb_no_ampliable" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/software_ver"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="202dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/android_5_0_2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/c_maras"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="176dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/principal_de_16_mp_f1_9_con_estabilizaci_n_v_deo_uhd_secundaria_5_mp_f1_9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/bater_a"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="170dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_2550_mah_no_extra_ble_carga_inal_mbrica_qi_pma" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>